Fix usage of loading blazor pages and its dependencies dynamically.

--- a/GjammT.Models/Resources.resx
+++ b/GjammT.Models/Resources.resx
@@ -42,4 +42,10 @@
     <data name="SIGNOUT" xml:space="preserve">
         <value>Logga ut</value>
     </data>
+    <data name="FIRSTNAME" xml:space="preserve">
+        <value>Förnamn</value>
+    </data>
+    <data name="LASTNAME" xml:space="preserve">
+        <value>Efternamn</value>
+    </data>
 </root>
