--- a/GjammT.Models/Resources.resx
+++ b/GjammT.Models/Resources.resx
@@ -48,4 +48,7 @@
     <data name="LASTNAME" xml:space="preserve">
         <value>Efternamn</value>
     </data>
+    <data name="CUSTOMER_NAME" xml:space="preserve">
+        <value>Kundnamn</value>
+    </data>
 </root>
