Some updates in readme. Removed RavenDB. Looking for using ef core and postgres instead, that is the current goal :)

--- a/GjammT.Models/Resources.en.resx
+++ b/GjammT.Models/Resources.en.resx
@@ -44,4 +44,7 @@
     <data name="LASTNAME" xml:space="preserve">
         <value>Last name</value>
     </data>
+    <data name="BOOKING_SCHEDULE" xml:space="preserve">
+        <value>Booking schedule</value>
+    </data>
 </root>
